[workspace]
members = ["bundler", "ceno", "ceno-macros", "ceno-server"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bundler = { path = "bundler" }
ceno = { path = "ceno" }
ceno-macros = { path = "ceno-macros" }
ceno-server = { path = "ceno-server" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
