[package]
name = "ceno"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
blake3 = "1.5.1"
bundler = { workspace = true }
ceno-macros = { workspace = true }
ceno-server = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = { version = "0.11.0", features = [
  "completion",
  "fuzzy-matcher",
  "fuzzy-select",
  "history",
] }
enum_dispatch = "0.3.13"
git2 = { version = "0.19.0", default-features = false }
glob = "0.3.1"
notify = { version = "6.1.1", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.4.1"
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.17.0"
opentelemetry-stdout = "0.5.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
rquickjs = { version = "0.6.2", features = ["full"] }
tokio = { workspace = true, features = ["fs"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = { workspace = true }
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ts-rs = "9.0.1"

[dev-dependencies]
tempfile = "3.12.0"
